Style/Streetwear's-evolution.css
 
/*  allows me to import google fonts*/
@import url('https://fonts.googleapis.com/css2?family=Rowdies&family=Work+Sans:wght@300;600&display=swap');

/* Removes margins from the header and sets sizes of the boxes */
* {box-sizing: border-box;
  margin:0;
}
/* Styles the header bar */
.landing-page-header {
  background-color: #DFBD69;
  overflow: hidden;
  font-family: 'Rowdies', cursive;
  color: #611CA9;
  width: 100%;
}
/* Adds a black background to the navigation bar */
.landing-page-menu{
  background-color: #000000;
  overflow: hidden;
  font-family: 'Rowdies', cursive;
  color: #ffffff;
  width: 100%;
}
/* Styles the links inside the navigation bar */
.landing-page-menu a{
  float: left;
  color: #ffffff;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}
/* Changes the link to purple on hover */
.landing-page-menu a:hover {
  background-color: #611CA9;
  color: #DFBD69;
}
/* Makes the active/current link purple */
.landing-page-menu a.active {
  background-color: #611CA9;
  color: #DFBD69;
}
/* Will automatically display the navbar vertically instead of horizontally on screens less than 600 pixels making webpage responsive */
@media screen and (max-width: 600px) {
}
/* Sets navbar position */
.navbar a {
  float: none;
  display: block;
}
/* Allows me to have the size and positioning I want*/
.logo{
  display: block;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  background-color: #D4B464;;
  width: 40vw;
}
/* styles body header text */
.Font{
  font-family:Rowdies;
  display: block;
  text-align: center;
}
/* styles body text */
.WorkSans{
  font-family:Work Sans;
}
/* stops the main text from stretching too far across the sceen, centres text with the flip cards making it easier for the user to read */
.text{
  padding-left: 15vw;
  padding-right: 15vw;
}
/* sets background colour to gold */
body{
  background-color: #D4B464;
  z-index: 0;
}
  /* Changes the  colour of links to a dark red to increase contrast */
a.links {
  color: #570000;
}

  /* Changes the  colour of visited links to a blue so it is visible against the background */
a.links:visited {
  color: #1C1EA9;
  background-color: transparent;
  text-decoration: none;
}
/* Changes the  colour of links to light blue on hover to increase contrast */
a.links:hover {
  color: #05e9dd;
  background-color: transparent;
  text-decoration: underline;
}
/* pictures wont be visble */
.pictures{
  z-index: -7;
  display: none;
}
/* Styles the right column of the flip cards*/
.right{
  position: relative;
  top: 10vh;
  float: right;
  margin-right: 20vw;
}
/* The flip card container for Hip-Hop*/
.Hip-hop{
  background-color: transparent;
  width: 305px;
  height: 350px;
  border: 2px solid #000000;
  perspective: 1000px; /* Gives the 3D effect */
  margin-left: 70vw;
}
/* helps position the inside of flip card */
.Hip-hop-inner {
  position: relative;
  width: 310px;
  height: 360px;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}
/* horizontal flip when mouse hovers over the card */
.Hip-hop:hover .Hip-hop-inner{
  transform: rotateY(180deg);
}
/* Position the front and back of card */
.Hip-hop-front, .Hip-hop-back{
  position: absolute;
  width: 310px;
  height: 360px;
  -webkit-backface-visibility: hidden; /* needed for Safari */
  backface-visibility: hidden;
}
/* Styles the front of the card*/
.Hip-hop-front{
  background-color: white;
  color: black;
}
/* Styles the back of the card */
.Hip-hop-back{
  background-color:#B19CD9;
  color:black;
  transform: rotateY(180deg);
  font-family: "work sans";
  padding: 30px;
}
/* The flip card container for skating*/
.skating{
  background-color: transparent;
  width: 304px;
  height: 350px;
  border: 2px solid #000000;
  perspective: 1000px;/* Gives the 3D effect */
  margin-left: 70vw; 
}
/* helps position the inside of flip card */
.skating-inner {
  position: relative;
  width: 309px;
  height: 360px;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}
/* horizontal flip when mouse hovers over the card */
.skating:hover .skating-inner{
  transform: rotateY(180deg);
}
/* Position the front and back of card */
.skating-front, .skating-back{
  position: absolute;
  width: 309px;
  height: 360px;
  -webkit-backface-visibility: hidden; /* needed for Safari */
  backface-visibility: hidden;
}
/* Styles the front of the card*/
.skating-front{
  color: black;
}
/* Styles the back of the card */
.skating-back{
  background-color:#B19CD9;
  color:black;
  transform: rotateY(180deg);
  font-family: 'work sans';
  padding: 30px;
}
/* The flip card container for japenese streetwear*/
.japanese-streetwear{
  background-color: transparent;
  width: 304px;
  height: 350px;
  border: 2px solid #000000;
  perspective: 1000px; /* Gives the 3D effect */
  margin-left: 70vw;
}
/* helps position the inside of flip card  */
.japanese-streetwear-inner {
  position: relative;
  width: 309px;
  height: 360px;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}
/* horizontal flip when mouse hovers over the card */
.japanese-streetwear:hover .japanese-streetwear-inner{
  transform: rotateY(180deg);
}
/* Position the front and back of card */
.japanese-streetwear-front, .japanese-streetwear-back{
  position: absolute;
  width: 309px;
  height: 360px;
  -webkit-backface-visibility: hidden; /* needed for Safari */
  backface-visibility: hidden;
}
/* Styles the front of the card*/
.japanese-streetwear-front{
  color: black;
}
/* Styles the back of the card */
.japanese-streetwear-back{
  background-color:#B19CD9;
  color:black;
  transform: rotateY(180deg);
  font-family: 'work sans';
  padding: 30px;
}
/* Styles the left column of cards */
.left{
  float: left;
  margin-left: 25vw;
  position: relative;
  top: 7vh;
  
}
/* ... */

